2021-06-04  Brady Eidson  <beidson@apple.com>

        Enforce a quota in window.sessionStorage
        rdar://78507096 and https://bugs.webkit.org/show_bug.cgi?id=226337

        Reviewed by Chris Dumez.

        * platform/ios-wk1/TestExpectations:
        * platform/ios/ios/storage/domstorage/5mb-quota.html: Removed.
        * storage/domstorage/quota-expected.txt:
        * storage/domstorage/quota.html:

2021-06-04  Antti Koivisto  <antti@apple.com>

        REGRESSION (maybe r276882): custom properties not available on host on initial paint
        https://bugs.webkit.org/show_bug.cgi?id=226574
        <rdar://problem/78863643>

        Reviewed by Simon Fraser.

        * fast/shadow-dom/resources/shared-resolver-host-invalidation.css: Added.
        (:host,):
        (div):
        * fast/shadow-dom/shared-resolver-host-invalidation-expected.html: Added.
        * fast/shadow-dom/shared-resolver-host-invalidation.html: Added.

2021-06-04  Alex Christensen  <achristensen@webkit.org>

        Implement off-by-default experimental feature for PerformanceResourceTiming.transferSize, encodedBodySize, and decodedBodySize
        https://bugs.webkit.org/show_bug.cgi?id=226629

        Reviewed by Brady Eidson.

        * performance-api/resource-timing-apis-expected.txt:
        * platform/mac/imported/w3c/web-platform-tests/resource-timing/test_resource_timing-expected.txt: Removed.

2021-06-04  Robert Jenner  <jenner@apple.com>

        Cleanup unused resources in LayoutTests/storage
        https://bugs.webkit.org/show_bug.cgi?id=226226
        <rdar://problem/78469934>

        Reviewed by Jonathan Bedard.

        * storage/domstorage/localstorage/resources/iframe-events-second.html: Removed.
        * storage/domstorage/localstorage/resources/private-browsing-3.html: Removed.
        * storage/domstorage/localstorage/resources/private-browsing-storage-2.html: Removed.
        * storage/domstorage/sessionstorage/resources/iframe-events-second.html: Removed.