@@ -1,3 +1,15 @@
+2021-06-04  Devin Rousso  <drousso@apple.com>
+
+        Web Inspector: Uncaught Exception: undefined is not an object (evaluating 'InspectorBackend.Enum.Page.ResourceType')
+        https://bugs.webkit.org/show_bug.cgi?id=226664
+
+        Reviewed by Joseph Pecoraro.
+
+        * UserInterface/Protocol/InspectorBackend.js:
+        (InspectorBackendClass.prototype.get Enum):
+        Use the list of all registered domains, not just the active domains, as only commands/events
+        are able to be filtered by target type.
+
 2021-05-15  Said Abou-Hallawa  <said@apple.com>
 
         Implement CanvasRenderingContext2D.createConicGradient
