@@ -1,3 +1,13 @@
+2021-06-04  Devin Rousso  <drousso@apple.com>
+
+        Web Inspector: Uncaught Exception: undefined is not an object (evaluating 'InspectorBackend.Enum.Page.ResourceType')
+        https://bugs.webkit.org/show_bug.cgi?id=226664
+
+        Reviewed by Joseph Pecoraro.
+
+        * inspector/protocol/enum.html: Added.
+        * inspector/protocol/enum-expected.txt: Added.
+
 2021-06-04  Brady Eidson  <beidson@apple.com>
 
         Enforce a quota in window.sessionStorage
